 # [#27678] PHP 5.4 (E_STRICT): installation fails due to strict warnings
 # [#27604] class suffix missing from mod_banner ITEMS
 # [#27479] Finder schema to support SQLServer
 # [#27607] Sample Data for SQLServer and SQLAzure
 # [#27635] JForm issue with Fabrik - proposed solution
 # [#27630] Issue with replacePrefix -- valid only for SQLServer

09-Jan-2012 Jean-Marie Simonet
 # [#27671] Hathor Global configuration not working. Thanks Andrea.
 # Updating installation ini fr-FR
 # [#27667] Move the debug CSS to its own file. Thanks Rouven.
 # [#26676] Fields with multi select in the profile won't work. Thanks Christophe.
 # [#26275] Joomla automatic add meta robots=index,follow. Thanks Christophe.

08-Jan-2012 Mark Dexter
 # Revert [#24634] Menu items don't become active (i.e. highlight) if the Menu Item Type is "Menu Item Alias" (Bernie Sumption)

08-Jan-2012 Jean-Marie Simonet
 # [#27551] Smart Search patch to show warning if content plug-in not enabled. Thanks Chris.
 # [#27580] Smart Search - Duplicate Code Cleanup, Strict Errors with FinderControllerUpdater. Thanks Michael
 # [#27631] Smart Search indexing does not properly account for item published states. Thanks Michael and Chris.
 # [#27584] Search from smart search module is producing two item ids. Thanks Elin and Andrea.
 # [#27654] Smart Search - Fix use of CHAR_LENGTH MySQL command. Thanks Michael.
 #$ [#27657] *Multidb: can not install without mysql support. Thanks Nikolai and Andrea
 #$ [#27646] *Add a check for Magic Quotes GPC to the installation. Thanks Rouven
 #$ [#27346] *Installation problem on step 1 - server without JSON. Thanks Rouven.
 $ [#27665] Smart search content plug-in screen name. Thanks Chris.

07-Jan-2012 Christophe Demko
 # [#24634] Menu items don't become active (i.e. highlight) if the Menu Item Type is "Menu Item Alias" (Bernie Sumption)

07-Jan-2012 Jean-Marie Simonet
 # [#27636] Option to disable Smart Search autocompleter missing from user interface. Thanks Chris
