@@ -7,6 +7,8 @@
 PLG_USER_JOOMLA="User - Joomla!"
 PLG_USER_JOOMLA_FIELD_AUTOREGISTER_DESC="Automatically create Registered Users where possible"
 PLG_USER_JOOMLA_FIELD_AUTOREGISTER_LABEL="Auto-create Users"
+PLG_USER_JOOMLA_FIELD_MAILTOUSER_DESC="When an administrator creates a user account, this determines if an email, which contains their username and password, is sent to the user."
+PLG_USER_JOOMLA_FIELD_MAILTOUSER_LABEL="Notification Mail to User"
 PLG_USER_JOOMLA_NEW_USER_EMAIL_BODY="Hello %s,\n\n\nYou have been added as a User to %s by an Administrator.\n\nThis email contains your username and password to log in to %s\n\nUsername: %s\nPassword: %s\n\n\nPlease do not respond to this message as it is automatically generated and is for information purposes only."
 PLG_USER_JOOMLA_NEW_USER_EMAIL_SUBJECT="New User Details"
 PLG_USER_JOOMLA_XML_DESCRIPTION="Handles Joomla!'s default User synchronisation"
