@@ -63,48 +63,51 @@ class plgUserJoomla extends JPlugin
 		// Initialise variables.
 		$app	= JFactory::getApplication();
 		$config	= JFactory::getConfig();
-
+		$mail_to_user = $this->params->get('mail_to_user', 1);
+		
 		if ($isnew) {
 			// TODO: Suck in the frontend registration emails here as well. Job for a rainy day.
 
 			if ($app->isAdmin()) {
+				if ($mail_to_user) {
 
-				// Load user_joomla plugin language (not done automatically).
-				$lang = JFactory::getLanguage();
-				$lang->load('plg_user_joomla', JPATH_ADMINISTRATOR);
-
-				// Compute the mail subject.
-				$emailSubject = JText::sprintf(
-					'PLG_USER_JOOMLA_NEW_USER_EMAIL_SUBJECT',
-					$user['name'],
-					$config->get('sitename')
-				);
-
-				// Compute the mail body.
-				$emailBody = JText::sprintf(
-					'PLG_USER_JOOMLA_NEW_USER_EMAIL_BODY',
-					$user['name'],
-					$config->get('sitename'),
-					JUri::root(),
-					$user['username'],
-					$user['password_clear']
-				);
-
-				// Assemble the email data...the sexy way!
-				$mail = JFactory::getMailer()
-					->setSender(
-						array(
-							$config->get('mailfrom'),
-							$config->get('fromname')
+					// Load user_joomla plugin language (not done automatically).
+					$lang = JFactory::getLanguage();
+					$lang->load('plg_user_joomla', JPATH_ADMINISTRATOR);
+	
+					// Compute the mail subject.
+					$emailSubject = JText::sprintf(
+						'PLG_USER_JOOMLA_NEW_USER_EMAIL_SUBJECT',
+						$user['name'],
+						$config->get('sitename')
+					);
+	
+					// Compute the mail body.
+					$emailBody = JText::sprintf(
+						'PLG_USER_JOOMLA_NEW_USER_EMAIL_BODY',
+						$user['name'],
+						$config->get('sitename'),
+						JUri::root(),
+						$user['username'],
+						$user['password_clear']
+					);
+	
+					// Assemble the email data...the sexy way!
+					$mail = JFactory::getMailer()
+						->setSender(
+							array(
+								$config->get('mailfrom'),
+								$config->get('fromname')
+							)
 						)
-					)
-					->addRecipient($user['email'])
-					->setSubject($emailSubject)
-					->setBody($emailBody);
-
-				if (!$mail->Send()) {
-					// TODO: Probably should raise a plugin error but this event is not error checked.
-					JError::raiseWarning(500, JText::_('ERROR_SENDING_EMAIL'));
+						->addRecipient($user['email'])
+						->setSubject($emailSubject)
+						->setBody($emailBody);
+	
+					if (!$mail->Send()) {
+						// TODO: Probably should raise a plugin error but this event is not error checked.
+						JError::raiseWarning(500, JText::_('ERROR_SENDING_EMAIL'));
+					}
 				}
 			}
 		}
